
uam_files += files(
	'tgsi_aa_point.c',
	'tgsi_build.c',
	'tgsi_dump.c',
	'tgsi_emulate.c',
	'tgsi_from_mesa.c',
	'tgsi_info.c',
	'tgsi_iterate.c',
	'tgsi_lowering.c',
	'tgsi_parse.c',
	'tgsi_point_sprite.c',
	'tgsi_sanity.c',
	'tgsi_scan.c',
	'tgsi_strings.c',
	'tgsi_text.c',
	'tgsi_transform.c',
	'tgsi_two_side.c',
	'tgsi_ureg.c',
	'tgsi_util.c',
)
