
uam_files += files(
	'nv50_ir.cpp',
	'nv50_ir_bb.cpp',
	'nv50_ir_build_util.cpp',
	'nv50_ir_emit_gk110.cpp',
	'nv50_ir_emit_gm107.cpp',
	'nv50_ir_emit_nv50.cpp',
	'nv50_ir_emit_nvc0.cpp',
	'nv50_ir_from_tgsi.cpp',
	'nv50_ir_graph.cpp',
	'nv50_ir_lowering_gm107.cpp',
	'nv50_ir_lowering_nv50.cpp',
	'nv50_ir_lowering_nvc0.cpp',
	'nv50_ir_peephole.cpp',
	'nv50_ir_print.cpp',
	'nv50_ir_ra.cpp',
	'nv50_ir_ssa.cpp',
	'nv50_ir_target.cpp',
	'nv50_ir_target_gm107.cpp',
	'nv50_ir_target_nv50.cpp',
	'nv50_ir_target_nvc0.cpp',
	'nv50_ir_util.cpp',
)
